# smart-api-rate-limiter

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_api.py
app/: main.py
app/api/: analytics.py  auth.py  protected.py
app/core/: config.py  rate_limiter.py  redis_client.py  security.py
app/models/: schemas.py
app/services/: analytics_service.py  user_service.py
app/utils/: logger.py
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
tests/: conftest.py  test_auth.py  test_rate_limiter.py
